Added header, main, footer and font awesome script.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="description" content="Cinnova, a small business in Sweden. Project management, Industry">
     <meta name="keywords" content="cinnova, project management, industry, Sweden, Köping">
     <meta name="author" content="Olle Brask">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Cinnova</title>
 </head>
 <body>
-    <h1>Cinnova</h1>
+    <header>
+        <h1>Cinnova</h1>
     <nav>
         <ul>
             <li>
@@ -20,5 +22,14 @@
             </li>
         </ul>
     </nav>
+    </header>
+    <main>
+        Main content
+    </main>
+    <footer>
+        Footer
+    </footer>
+    <!-- Font awesome script-->
+    <script src="https://kit.fontawesome.com/ccfe7cad8e.js" crossorigin="anonymous"></script>
 </body>
 </html>
