--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <header>
         <h1>Cinnova</h1>
     <nav>
-        <ul>
+        <ul class="menu">
             <li>
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="services.html">About</a>
+                <a href="services.html">Services</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact us</a>
             </li>
         </ul>
     </nav>
