Add social-media links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,30 +10,44 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Cinnova</title>
 </head>
+
 <body>
     <header>
         <h1>Cinnova</h1>
-    <nav>
-        <ul class="menu">
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="services.html">Services</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact us</a>
-            </li>
-        </ul>
-    </nav>
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="services.html">Services</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact us</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         Main content
     </main>
     <footer>
-        Footer
+        <ul class="social-network">
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (Page opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                aria-label="Visit us on Twitter (Page opens in a new tab)"><i
+                    class="fa-brands fa-square-twitter"></i></a>
+        </li>
+        </ul>
     </footer>
     <!-- Font awesome script-->
     <script src="https://kit.fontawesome.com/ccfe7cad8e.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
