Style social network footer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Main content
     </main>
     <footer>
-        <ul class="social-network">
+        <ul id="social-network">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit us on Facebook (Page opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
