--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
     <header>
+        <input type="checkbox" id="menu-toggle" name="menu-toggle">
+        <label for="menu-toggle" class="menu-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <h1>Cinnova</h1>
         <nav>
             <ul class="menu">
