Added media query for tablets and larger

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <input type="checkbox" id="menu-toggle" name="menu-toggle">
         <label for="menu-toggle" class="menu-toggle-label"><i class="fa-solid fa-bars"></i></label>
-        <h1>Cinnova</h1>
+        <h1 id="logo">Cinnova</h1>
         <nav>
             <ul class="menu">
                 <li>
