--- a/services.html
+++ b/services.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cinnova, a small business in Sweden. Project management, Industry">
+    <meta name="keywords" content="cinnova, project management, industry, Sweden, Köping">
+    <meta name="author" content="Olle Brask">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Cinnova</title>
 </head>
+
 <body>
-    <h1>Cinnova</h1>
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
+    <header>
+        <input type="checkbox" id="menu-toggle" name="menu-toggle">
+        <label for="menu-toggle" class="menu-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <h1 id="logo">Cinnova</h1>
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="services.html">Services</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact us</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        Main content
+    </main>
+    <footer>
+        <ul id="social-network">
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
-            <li>
-                <a href="about.html">About</a>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (Page opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
             </li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                aria-label="Visit us on Twitter (Page opens in a new tab)"><i
+                    class="fa-brands fa-square-twitter"></i></a>
+        </li>
         </ul>
-    </nav>
+    </footer>
+    <!-- Font awesome script-->
+    <script src="https://kit.fontawesome.com/ccfe7cad8e.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
