Add hero image and text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
         </nav>
     </header>
     <main>
-        Main content
+        <!--Hero image with larger text.-->
+        <section class="hero">
+            <div class="hero-text">
+                <h2>Inspiring text</h2>
+                <h3>that leads to more information</h3>
+            </div>
+        </section>
     </main>
     <footer>
         <ul id="social-network">
