Add images to folder and new index-image section

--- a/index.html
+++ b/index.html
@@ -38,20 +38,32 @@
                 <h3>that leads to more information</h3>
             </div>
         </section>
+        <section class="index-images">
+            <div class="imagebox_1">
+
+                <div class="imagebox_image">
+                    <img src="assets/images/construction.jpg" alt="Person working on computer"/>
+                </div>
+                <div class="imagebox_text">
+                    <h3>Testing</h3>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <ul id="social-network">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i
+                        class="fa-brands fa-facebook"></i></a>
             </li>
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit us on Instagram (Page opens in a new tab)"><i
                         class="fa-brands fa-instagram"></i></a>
             </li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                aria-label="Visit us on Twitter (Page opens in a new tab)"><i
-                    class="fa-brands fa-square-twitter"></i></a>
-        </li>
+                    aria-label="Visit us on Twitter (Page opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
+            </li>
         </ul>
     </footer>
     <!-- Font awesome script-->
