--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
         </section>
         <section class="index-images">
             <div class="imagebox_1">
-
+                <div class="image_header">
+                    <h2>What do we do</h2>
+                </div>
                 <div class="imagebox_image">
-                    <img src="assets/images/construction.jpg" alt="Person working on computer"/>
+                    <img src="assets/images/construction.jpg" alt="Person working on computer" />
                 </div>
                 <div class="imagebox_text">
                     <h3>Testing</h3>
