--- a/index.html
+++ b/index.html
@@ -39,12 +39,28 @@
             </div>
         </section>
         <section class="index-images">
-            <div class="imagebox_1">
-                <div class="image_header">
-                    <h2>What do we do</h2>
-                </div>
+            <div class="image_header">
+                <h2>What do we do</h2>
+            </div>
+            <div class="imagebox">
                 <div class="imagebox_image">
                     <img src="assets/images/construction.jpg" alt="Person working on computer" />
+                </div>
+                <div class="imagebox_text">
+                    <h3>Testing</h3>
+                </div>
+            </div>
+            <div class="imagebox">
+                <div class="imagebox_image">
+                    <img src="assets/images/project-management.jpg" alt="Person having a presentation" />
+                </div>
+                <div class="imagebox_text">
+                    <h3>Testing</h3>
+                </div>
+            </div>
+            <div class="imagebox">
+                <div class="imagebox_image">
+                    <img src="assets/images/ideas-action.jpg" alt="Laptop showing ideas" />
                 </div>
                 <div class="imagebox_text">
                     <h3>Testing</h3>
