Style for media query tablets and laptops. Moved second header to a new section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
                 <h3>that leads to more information</h3>
             </div>
         </section>
-        <section class="index-images">
-            <div class="image_header">
+        <section class="image_header">
+            <div>
                 <h2>What do we do</h2>
             </div>
+        </section>
+        <!-- Section with pictures-->
+        <section class="index-images">
             <div class="imagebox">
                 <div class="imagebox_image">
                     <img src="assets/images/construction.jpg" alt="Person working on computer" />
