--- a/services.html
+++ b/services.html
@@ -31,7 +31,23 @@
         </nav>
     </header>
     <main>
-        Main content
+        <!-- Section with services-->
+        <section class="service-header">
+            <div>
+                <h2>Services</h2>
+            </div>
+        </section>
+        <section class="services">
+            <div class="service-regular">
+                <div class="service_text">
+                    <h2>Topic</h2>
+                    <h3>Content text describing the service</h3>
+                </div>
+                <div class="service_img">
+                    <img src="assets/images/construction.jpg" alt="Person working on computer" />
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <ul id="social-network">
