Style images for services page

--- a/services.html
+++ b/services.html
@@ -47,6 +47,24 @@
                     <img src="assets/images/construction.jpg" alt="Person working on computer" />
                 </div>
             </div>
+            <div class="service-invert">
+                <div class="service_text">
+                    <h2>Topic</h2>
+                    <h3>Content text describing the service</h3>
+                </div>
+                <div class="service_img">
+                    <img src="assets/images/construction.jpg" alt="Person working on computer" />
+                </div>
+            </div>
+            <div class="service-regular">
+                <div class="service_text">
+                    <h2>Topic</h2>
+                    <h3>Content text describing the service</h3>
+                </div>
+                <div class="service_img">
+                    <img src="assets/images/construction.jpg" alt="Person working on computer" />
+                </div>
+            </div>
         </section>
     </main>
     <footer>
