--- a/services.html
+++ b/services.html
@@ -38,48 +38,29 @@
             </div>
         </section>
         <section class="services">
-            <div class="service-regular">
-                <div class="service_text">
-                    <h2>Topic</h2>
-                    <h3>Content text describing the service</h3>
-                </div>
-                <div class="service_img">
-                    <img src="assets/images/construction.jpg" alt="Person working on computer" />
-                </div>
+            <div class="service_text">
+                <h2>Topic</h2>
+                <h3>Text about the topic</h3>
             </div>
-            <div class="service-invert">
-                <div class="service_text">
-                    <h2>Topic</h2>
-                    <h3>Content text describing the service</h3>
-                </div>
-                <div class="service_img">
-                    <img src="assets/images/construction.jpg" alt="Person working on computer" />
-                </div>
-            </div>
-            <div class="service-regular">
-                <div class="service_text">
-                    <h2>Topic</h2>
-                    <h3>Content text describing the service</h3>
-                </div>
-                <div class="service_img">
-                    <img src="assets/images/construction.jpg" alt="Person working on computer" />
-                </div>
+            <div id=service_image>
+            <img src="assets/images/construction.jpg" alt="Person working on computer" />
             </div>
         </section>
     </main>
     <footer>
         <ul id="social-network">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i
+                        class="fa-brands fa-facebook"></i></a>
             </li>
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit us on Instagram (Page opens in a new tab)"><i
                         class="fa-brands fa-instagram"></i></a>
             </li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                aria-label="Visit us on Twitter (Page opens in a new tab)"><i
-                    class="fa-brands fa-square-twitter"></i></a>
-        </li>
+                    aria-label="Visit us on Twitter (Page opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
+            </li>
         </ul>
     </footer>
     <!-- Font awesome script-->
