Add two more sections with images, style the second to reversed

--- a/services.html
+++ b/services.html
@@ -37,6 +37,7 @@
                 <h2>Services</h2>
             </div>
         </section>
+        <!--1st service section-->
         <section class="services">
             <div class="service_text">
                 <h2>Topic</h2>
@@ -44,6 +45,26 @@
             </div>
             <div id=service_image>
             <img src="assets/images/construction.jpg" alt="Person working on computer" />
+            </div>
+        </section>
+        <!--Reversed 2nd service section-->
+        <section class="services-reverse">
+            <div class="service_text">
+                <h2>Topic</h2>
+                <h3>Text about the topic</h3>
+            </div>
+            <div id=service_image>
+            <img src="assets/images/project-management.jpg" alt="Person working on computer" />
+            </div>
+        </section>
+        <!--3rd service section-->
+        <section class="services">
+            <div class="service_text">
+                <h2>Topic</h2>
+                <h3>Text about the topic</h3>
+            </div>
+            <div id=service_image>
+            <img src="assets/images/ideas-action.jpg" alt="Person working on computer" />
             </div>
         </section>
     </main>
