Added hero image for contact page

--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,16 @@
         </nav>
     </header>
     <main>
-        Main content
+        <section id="hero2"></section>
+        <!--<section id="contact">
+            <section id="hero2">
+                <div id="text">
+                    <p>hello</p>
+                </div>
+            </section>
+        </section> !-->
     </main>
-    <footer>
+    <footer class="contact-footer">
         <ul id="social-network">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit us on Facebook (Page opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
