Style contact form

--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,12 @@
                     <!-- Email -->
                     <label for="email" class="label_hidden label_email">Email Address</label>
                     <div class="input_email">
-                        <input type="email" id="email" name="email" placeholder="Email Address" required
-                            class="text_input">
+                        <input type="email" id="email" name="email" placeholder="Email Address" required class="text_input">
                     </div>
                     <!-- Submit button-->
                     <button class="button submit_button" type="submit">Submit</button>
                 </form>
+            </div>
             </div>
         </section>
     </main>
