Add address box

--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,17 @@
     <main>
         <section class="hero2">
             <!--Form section-->
+            <div class="address_box">
+                <ul class="address_list">
+                    <li><h2 class="contact_text">Cinnova AB</h2></li>
+                    <li><h3 class="contact_text">Secret Street 43</h3></li>
+                    <li><h3 class="contact_text">731 43 Köping</h3></li>
+                    <li><h3 class="contact_text">Sweden</h3></li>
+                </ul>
+            </div>
             <div class="contact_box">
                 <form method="GET" action="response.html" class="sign-up">
-                    <h2>Fill the form and we will contact you!</h2>
+                    <h2 id="topic" class="contact_text">Fill the form and we will contact you!</h2>
                     <!--Name-->
                     <label for="name" class="label_hidden label_name">Name</label>
                     <div class="input_name">
