Style address box and contact form

--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,10 @@
                     <li><h3 class="contact_text">Secret Street 43</h3></li>
                     <li><h3 class="contact_text">731 43 Köping</h3></li>
                     <li><h3 class="contact_text">Sweden</h3></li>
+                    <li><h4 class="contact_text">cinnova@thisisafakemail.com</h4></li>
                 </ul>
             </div>
+            <br>
             <div class="contact_box">
                 <form method="GET" action="response.html" class="sign-up">
                     <h2 id="topic" class="contact_text">Fill the form and we will contact you!</h2>
