Fix typo in contact.html

--- a/contact.html
+++ b/contact.html
@@ -49,13 +49,13 @@
                     <!--Name-->
                     <label for="name" class="label_hidden label_name">Name</label>
                     <div class="input_name">
-                        <input id="name" name="name" type="text" placeholder="Name" required class="text_input" />
+                        <input id="name" name="name" type="text" placeholder="Name" required class="text_input">
                     </div>
                     <!--Name of business-->
                     <label for="company" class="label_hidden label_company">Business</label>
                     <div class="input_company">
                         <input id="company" name="company" type="text" placeholder="Company" required
-                            class="text_input" />
+                            class="text_input">
                     </div>
                     <!-- Email -->
                     <label for="email" class="label_hidden label_email">Email Address</label>
@@ -65,7 +65,6 @@
                     <!-- Submit button-->
                     <button class="button submit_button" type="submit">Submit</button>
                 </form>
-            </div>
             </div>
         </section>
     </main>
