Fix text to service instad of topic

--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
         <section class="services">
             <div class="service_text">
                 <h3>Topic</h3>
-                <h4>Text about the topic</h4>
+                <h4>Text about the service</h4>
             </div>
             <div id=service_image>
             <img src="assets/images/construction.jpg" alt="Person working on computer" />
@@ -51,7 +51,7 @@
         <section class="services-reverse">
             <div class="service_text">
                 <h3>Topic</h3>
-                <h4>Text about the topic</h4>
+                <h4>Text about the service</h4>
             </div>
             <div id=service_image>
             <img src="assets/images/project-management.jpg" alt="Person working on computer" />
@@ -61,7 +61,7 @@
         <section class="services">
             <div class="service_text">
                 <h3>Topic</h3>
-                <h4>Text about the topic</h4>
+                <h4>Text about the service</h4>
             </div>
             <div id=service_image>
             <img src="assets/images/ideas-action.jpg" alt="Person working on computer" />
