Fix name of of class on contact us form

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             </div>
             <br>
             <div class="contact_box">
-                <form method="GET" action="response.html" class="sign-up">
+                <form method="GET" action="response.html" class="contact-us">
                     <h2 id="topic" class="contact_text">Fill the form and we will contact you!</h2>
                     <!--Name-->
                     <label for="name" class="label_hidden label_name">Name</label>
