--- a/contact.html
+++ b/contact.html
@@ -47,23 +47,23 @@
                 <form method="GET" action="response.html" class="contact-us">
                     <h2 id="topic" class="contact_text">Fill the form and we will contact you!</h2>
                     <!--Name-->
-                    <label for="name" class="label_hidden label_name">Name</label>
+                    <label for="name" class="label_hidden">Name</label>
                     <div class="input_name">
                         <input id="name" name="name" type="text" placeholder="Name" required class="text_input">
                     </div>
                     <!--Name of business-->
-                    <label for="company" class="label_hidden label_company">Business</label>
+                    <label for="company" class="label_hidden">Business</label>
                     <div class="input_company">
                         <input id="company" name="company" type="text" placeholder="Company" required
                             class="text_input">
                     </div>
                     <!-- Email -->
-                    <label for="email" class="label_hidden label_email">Email Address</label>
+                    <label for="email" class="label_hidden">Email Address</label>
                     <div class="input_email">
                         <input type="email" id="email" name="email" placeholder="Email Address" required class="text_input">
                     </div>
                     <!-- Submit button-->
-                    <button class="button submit_button" type="submit">Submit</button>
+                    <button class="submit_button" type="submit">Submit</button>
                 </form>
             </div>
         </section>
