--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section class="image_header">
             <div>
-                <h2>What do we do</h2>
+                <h2>What we do</h2>
             </div>
         </section>
         <!-- Section with pictures-->
