Add comments on html pages

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <!--Navigation bar-->
         <input type="checkbox" id="menu-toggle" name="menu-toggle">
         <label for="menu-toggle" class="menu-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <h1 id="logo">Cinnova</h1>
@@ -31,8 +32,9 @@
         </nav>
     </header>
     <main>
+        <!--Form section-->
         <section class="hero2">
-            <!--Form section-->
+            <!--Box with address-->
             <div class="address_box">
                 <ul class="address_list">
                     <li><h2 class="contact_text">Cinnova AB</h2></li>
@@ -43,6 +45,7 @@
                 </ul>
             </div>
             <br>
+            <!-- Box with contact us form-->
             <div class="contact_box">
                 <form method="GET" action="response.html" class="contact-us">
                     <h2 id="topic" class="contact_text">Fill the form and we will contact you!</h2>
@@ -68,6 +71,7 @@
             </div>
         </section>
     </main>
+    <!--Social media footer-->
     <footer class="contact-footer">
         <ul id="social-network">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
