--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <!--Navigation bar-->
         <input type="checkbox" id="menu-toggle" name="menu-toggle">
         <label for="menu-toggle" class="menu-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <h1 id="logo">Cinnova</h1>
@@ -38,6 +39,7 @@
                 <h3>that leads to more information</h3>
             </div>
         </section>
+        <!--Topic for images-->
         <section class="image_header">
             <div>
                 <h2>What we do</h2>
@@ -72,6 +74,7 @@
         </section>
     </main>
     <footer>
+        <!--Social media footer-->
         <ul id="social-network">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit us on Facebook (Page opens in a new tab)"><i
