--- a/services.html
+++ b/services.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <!--Navigation bar-->
         <input type="checkbox" id="menu-toggle" name="menu-toggle">
         <label for="menu-toggle" class="menu-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <h1 id="logo">Cinnova</h1>
@@ -69,6 +70,7 @@
         </section>
     </main>
     <footer>
+        <!--Social media footer-->
         <ul id="social-network">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit us on Facebook (Page opens in a new tab)"><i
