Style response page for media query tablets and larger

--- a/response.html
+++ b/response.html
@@ -34,11 +34,12 @@
     <main>
         <!--Form section-->
         <section class="hero2">
-            <!--Box with response-->
             <div class="response_box">
-                <h2>Thank you! We will contact you as soon as possible.
-                </h2>
+            <!--Box with response-->
+            <div class="response_content">
+                <h2>Thank you! We will contact you as soon as possible.</h2>
                 <h3>You will return to the homepage in 10 seconds!</h3>
+            </div>
             </div>
         </section>
     </main>
