Add metatag for returning to index page from response pages

--- a/response.html
+++ b/response.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Cinnova, a small business in Sweden. Project management, Industry">
     <meta name="keywords" content="cinnova, project management, industry, Sweden, Köping">
     <meta name="author" content="Olle Brask">
+    <meta http-equiv="refresh" content="10; url=index.html">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Cinnova</title>
 </head>
