Add aria-labels for navigation links

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,13 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" aria-label="Cinnova homepage">Home</a>
                 </li>
                 <li>
-                    <a href="services.html">Services</a>
+                    <a href="services.html" aria-label="Servicepage, list of services Cinnova provides.">Services</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact us</a>
+                    <a href="contact.html" aria-label="Contact page, address and contact information for Cinnova.">Contact us</a>
                 </li>
             </ul>
         </nav>
