Fix html code more visually attractive in contact page

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
                     <a href="services.html" aria-label="Servicepage, list of services Cinnova provides.">Services</a>
                 </li>
                 <li>
-                    <a href="contact.html" aria-label="Contact page, address and contact information for Cinnova.">Contact us</a>
+                    <a href="contact.html"
+                        aria-label="Contact page, address and contact information for Cinnova.">Contact us</a>
                 </li>
             </ul>
         </nav>
@@ -37,11 +38,21 @@
             <!--Box with address-->
             <div class="address_box">
                 <ul class="address_list">
-                    <li><h2 class="contact_text">Cinnova AB</h2></li>
-                    <li><h3 class="contact_text">Secret Street 43</h3></li>
-                    <li><h3 class="contact_text">731 43 Köping</h3></li>
-                    <li><h3 class="contact_text">Sweden</h3></li>
-                    <li><h4 class="contact_text">cinnova@thisisafakemail.com</h4></li>
+                    <li>
+                        <h2 class="contact_text">Cinnova AB</h2>
+                    </li>
+                    <li>
+                        <h3 class="contact_text">Secret Street 43</h3>
+                    </li>
+                    <li>
+                        <h3 class="contact_text">731 43 Köping</h3>
+                    </li>
+                    <li>
+                        <h3 class="contact_text">Sweden</h3>
+                    </li>
+                    <li>
+                        <h4 class="contact_text">cinnova@thisisafakemail.com</h4>
+                    </li>
                 </ul>
             </div>
             <br>
@@ -63,7 +74,8 @@
                     <!-- Email -->
                     <label for="email" class="label_hidden">Email Address</label>
                     <div class="input_email">
-                        <input type="email" id="email" name="email" placeholder="Email Address" required class="text_input">
+                        <input type="email" id="email" name="email" placeholder="Email Address" required
+                            class="text_input">
                     </div>
                     <!-- Submit button-->
                     <button class="submit_button" type="submit">Submit</button>
