Add text to services

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     <a href="services.html" aria-label="Servicepage, list of services Cinnova provides.">Services</a>
                 </li>
                 <li>
-                    <a href="contact.html" aria-label="Contact page, address and contact information for Cinnova.">Contact us</a>
+                    <a href="contact.html"
+                        aria-label="Contact page, address and contact information for Cinnova.">Contact us</a>
                 </li>
             </ul>
         </nav>
@@ -52,7 +53,7 @@
                     <img src="assets/images/construction.jpg" alt="Person working on computer" />
                 </div>
                 <div class="imagebox_text">
-                    <h3>Testing</h3>
+                    <h3>Mechanical Design</h3>
                 </div>
             </div>
             <div class="imagebox">
@@ -60,7 +61,7 @@
                     <img src="assets/images/project-management.jpg" alt="Person having a presentation" />
                 </div>
                 <div class="imagebox_text">
-                    <h3>Testing</h3>
+                    <h3>Project Management</h3>
                 </div>
             </div>
             <div class="imagebox">
@@ -68,7 +69,7 @@
                     <img src="assets/images/ideas-action.jpg" alt="Laptop showing ideas" />
                 </div>
                 <div class="imagebox_text">
-                    <h3>Testing</h3>
+                    <h3>Product Development</h3>
                 </div>
             </div>
         </section>
