--- a/services.html
+++ b/services.html
@@ -26,7 +26,8 @@
                     <a href="services.html" aria-label="Servicepage, list of services Cinnova provides.">Services</a>
                 </li>
                 <li>
-                    <a href="contact.html" aria-label="Contact page, address and contact information for Cinnova.">Contact us</a>
+                    <a href="contact.html"
+                        aria-label="Contact page, address and contact information for Cinnova.">Contact us</a>
                 </li>
             </ul>
         </nav>
@@ -41,31 +42,32 @@
         <!--1st service section-->
         <section class="services">
             <div class="service_text">
-                <h3>Topic</h3>
-                <h4>Text about the service</h4>
+                <h3>Mechanical Design</h3>
+                <h4>We provide detailed design of components and systems,
+                    production documentation and drawings.</h4>
             </div>
             <div id=service_image>
-            <img src="assets/images/construction.jpg" alt="Person working on computer" />
+                <img src="assets/images/construction.jpg" alt="Person working on computer" />
             </div>
         </section>
         <!--Reversed 2nd service section-->
         <section class="services-reverse">
             <div class="service_text">
-                <h3>Topic</h3>
-                <h4>Text about the service</h4>
+                <h3>Project Management</h3>
+                <h4>We help you plan, organize and evaluate. The project achieves the goals in terms of schedule, quality and economy.</h4>
             </div>
             <div id=service_image>
-            <img src="assets/images/project-management.jpg" alt="Person working on computer" />
+                <img src="assets/images/project-management.jpg" alt="Person working on computer" />
             </div>
         </section>
         <!--3rd service section-->
         <section class="services">
             <div class="service_text">
-                <h3>Topic</h3>
-                <h4>Text about the service</h4>
+                <h3>Product Development</h3>
+                <h4>We can help you with developing an idea into a new product or improving an existing product.</h4>
             </div>
             <div id=service_image>
-            <img src="assets/images/ideas-action.jpg" alt="Person working on computer" />
+                <img src="assets/images/ideas-action.jpg" alt="Person working on computer" />
             </div>
         </section>
     </main>
