Add slogan to heroimage

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <!--Hero image with larger text.-->
         <section class="hero">
             <div class="hero-text">
-                <h2>Inspiring text</h2>
-                <h3>that leads to more information</h3>
+                <h2>Continous Improvement</h2>
+                <h3>innovation for a better future</h3>
             </div>
         </section>
         <!--Topic for images-->
