Edit images to webp instead of jpg

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section class="index-images">
             <div class="imagebox">
                 <div class="imagebox_image">
-                    <img src="assets/images/construction.jpg" alt="Person working on computer" />
+                    <img src="assets/images/construction.webp" alt="Person working on computer" />
                 </div>
                 <div class="imagebox_text">
                     <h3>Mechanical Design</h3>
@@ -58,7 +58,7 @@
             </div>
             <div class="imagebox">
                 <div class="imagebox_image">
-                    <img src="assets/images/project-management.jpg" alt="Person having a presentation" />
+                    <img src="assets/images/project-management.webp" alt="Person having a presentation" />
                 </div>
                 <div class="imagebox_text">
                     <h3>Project Management</h3>
@@ -66,7 +66,7 @@
             </div>
             <div class="imagebox">
                 <div class="imagebox_image">
-                    <img src="assets/images/ideas-action.jpg" alt="Laptop showing ideas" />
+                    <img src="assets/images/ideas-action.webp" alt="Laptop showing ideas" />
                 </div>
                 <div class="imagebox_text">
                     <h3>Product Development</h3>
