--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
                     production documentation and drawings.</h4>
             </div>
             <div id=service_image>
-                <img src="assets/images/construction.jpg" alt="Person working on computer" />
+                <img src="assets/images/construction.webp" alt="Person working on computer" />
             </div>
         </section>
         <!--Reversed 2nd service section-->
@@ -57,7 +57,7 @@
                 <h4>We help you plan, organize and evaluate. The project achieves the goals in terms of schedule, quality and economy.</h4>
             </div>
             <div id=service_image>
-                <img src="assets/images/project-management.jpg" alt="Person working on computer" />
+                <img src="assets/images/project-management.webp" alt="Person working on computer" />
             </div>
         </section>
         <!--3rd service section-->
@@ -67,7 +67,7 @@
                 <h4>We can help you with developing an idea into a new product or improving an existing product.</h4>
             </div>
             <div id=service_image>
-                <img src="assets/images/ideas-action.jpg" alt="Person working on computer" />
+                <img src="assets/images/ideas-action.webp" alt="Person working on computer" />
             </div>
         </section>
     </main>
