Edit id to class for service_image

--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
                 <h4>We provide detailed design of components and systems,
                     production documentation and drawings.</h4>
             </div>
-            <div id=service_image>
+            <div class=service_image>
                 <img src="assets/images/construction.webp" alt="Person working on computer">
             </div>
         </section>
@@ -56,7 +56,7 @@
                 <h3>Project Management</h3>
                 <h4>We help you plan, organize and evaluate. The project achieves the goals in terms of schedule, quality and economy.</h4>
             </div>
-            <div id=service_image>
+            <div class=service_image>
                 <img src="assets/images/project-management.webp" alt="Person working on computer">
             </div>
         </section>
@@ -66,7 +66,7 @@
                 <h3>Product Development</h3>
                 <h4>We can help you with developing an idea into a new product or improving an existing product.</h4>
             </div>
-            <div id=service_image>
+            <div class=service_image>
                 <img src="assets/images/ideas-action.webp" alt="Person working on computer">
             </div>
         </section>
