Add color to hover for links and submit button

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <a href="services.html" aria-label="Servicepage, list of services Cinnova provides.">Services</a>
                 </li>
                 <li>
-                    <a href="contact.html"
+                    <a class="active" href="contact.html"
                         aria-label="Contact page, address and contact information for Cinnova.">Contact us</a>
                 </li>
             </ul>
