--- a/services.html
+++ b/services.html
@@ -23,7 +23,8 @@
                     <a href="index.html" aria-label="Cinnova homepage">Home</a>
                 </li>
                 <li>
-                    <a href="services.html" aria-label="Servicepage, list of services Cinnova provides.">Services</a>
+                    <a class="active" href="services.html"
+                        aria-label="Servicepage, list of services Cinnova provides.">Services</a>
                 </li>
                 <li>
                     <a href="contact.html"
@@ -54,7 +55,8 @@
         <section class="services-reverse">
             <div class="service_text">
                 <h3>Project Management</h3>
-                <h4>We help you plan, organize and evaluate. The project achieves the goals in terms of schedule, quality and economy.</h4>
+                <h4>We help you plan, organize and evaluate. The project achieves the goals in terms of schedule,
+                    quality and economy.</h4>
             </div>
             <div class=service_image>
                 <img src="assets/images/project-management.webp" alt="Person working on computer">
@@ -74,17 +76,23 @@
     <footer>
         <!--Social media footer-->
         <ul id="social-network">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i
-                        class="fa-brands fa-facebook"></i></a>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (Page opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Instagram (Page opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (Page opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
             </li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Twitter (Page opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></a>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Twitter (Page opens in a new tab)">
+                    <i class="fa-brands fa-square-twitter"></i>
+                </a>
             </li>
         </ul>
     </footer>
