--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a href="index.html" aria-label="Cinnova homepage">Home</a>
+                    <a class="active" href="index.html" aria-label="Cinnova homepage">Home</a>
                 </li>
                 <li>
                     <a href="services.html" aria-label="Servicepage, list of services Cinnova provides.">Services</a>
@@ -77,17 +77,23 @@
     <footer>
         <!--Social media footer-->
         <ul id="social-network">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i
-                        class="fa-brands fa-facebook"></i></a>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (Page opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Instagram (Page opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (Page opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
             </li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Twitter (Page opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></a>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Twitter (Page opens in a new tab)">
+                    <i class="fa-brands fa-square-twitter"></i>
+                </a>
             </li>
         </ul>
     </footer>
