--- a/response.html
+++ b/response.html
@@ -47,17 +47,23 @@
     <!--Social media footer-->
     <footer class="contact-footer">
         <ul id="social-network">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Facebook (Page opens in a new tab)"><i
-                        class="fa-brands fa-facebook"></i></a>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (Page opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Instagram (Page opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (Page opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
             </li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit us on Twitter (Page opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></a>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Twitter (Page opens in a new tab)">
+                    <i class="fa-brands fa-square-twitter"></i>
+                </a>
             </li>
         </ul>
     </footer>
